--- a/cardgame/src/app/profile/profile-page/profile-page.component.html
+++ b/cardgame/src/app/profile/profile-page/profile-page.component.html
@@ -1,35 +1,46 @@
 <div class="card">
-<h2>{{helloMsg}}</h2>
   <div class="col-md-12">
-    <div class="row">
+    <form [formGroup]="form" class="row">
       <div class="col-md-4">
         <div class="form-group">
           <label>First Name</label>
-          <input type="text" [(ngModel)]="firstName">
+          <input type="text" formControlName="firstName">
+          <span *ngIf="form.controls.firstName.errors && form.controls.firstName.touched" class="error">
+            Required
+          </span>
         </div>
         <div class="form-group">
           <label>Last Name</label>
-          <input type="text" [(ngModel)]="lastName">
+          <input type="text" formControlName="lastName">
+          <span *ngIf="form.controls.lastName.errors && form.controls.lastName.touched" class="error">
+            Required
+          </span>
         </div>
-          </div>
-          <div class="col-md-4">
-            <div class="form-group">
-              <label>Date of Birth</label>
-              <input type="text" placeholder="12/12/1999" [(ngModel)]="birthday">
-            </div>
-            <div class="form-group">
-              <label>Gender</label>
-              <input type="radio" name="gender" value="male" (ngModel)="gender"> Male <br/>
-              <input type="radio" name="gender" value="female" (ngModel)="gender"> Female <br/>
-              <input type="radio" name="gender" value="other" (ngModel)="gender"> Other <br/>
-            </div>
-          </div>
-        <div class="col-md-4">
-          <button class="btn btn-wide btn-primary" (click)="calculateAge()">Get Age</button>
-          <br/>
-          <h5>Current Age: {{age}}</h5>
+      </div>
+      <div class="col-md-4">
+        <div class="form-group">
+          <label>Date of Birth</label>
+          <input type="text" placeholder="12/12/1999" formControlName="birthday">
+          <span *ngIf="form.controls.birthday.errors && form.controls.birthday.touched" class="error">
+            Invalid
+          </span>
         </div>
-    </div>
+        <div class="form-group">
+          <label>Gender</label>
+          <input type="radio" name="gender" value="male" formControlName="gender"> Male <br/>
+          <input type="radio" name="gender" value="female" formControlName="gender"> Female <br/>
+          <input type="radio" name="gender" value="other" formControlName="gender"> Other <br/>
+          <span *ngIf="form.controls.gender.errors && form.controls.gender.touched" class="error">
+            Required
+          </span>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <button class="btn btn-wide btn-primary" (click)="calculateAge()">Get Age</button>
+        <br/>
+        <h5>Current Age: {{age}}</h5>
+      </div>
+    </form>
     
   </div>
 
